--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-Flask==2.0.1
-Werkzeug==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-itsdangerous==2.0.1
-click==8.0.1
+Flask==3.0.2
+requests==2.31.0
+Werkzeug==3.0.1
+Jinja2==3.1.3
+click==8.1.7
+itsdangerous==2.1.2
+MarkupSafe==2.1.5
+urllib3==2.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
 adif_io==0.5.3
 ipdb
 pyhamtools
