--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
+      - FLASK_DEBUG=True
     command: python app.py
