--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,13 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies with uv, run tests and lint
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: HamLogMap CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 permissions:
   contents: read
@@ -26,39 +26,45 @@ jobs:
       with:
         python-version: "3.14"
 
-    - name: Cache pip dependencies
+    - name: Install uv
+      run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+    - name: Cache uv dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        path: ~/.cache/uv
+        key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ runner.os }}-uv-
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        source ~/.cargo/env
+        uv sync
 
     - name: Lint with flake8
       run: |
+        source ~/.cargo/env
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=venv,env,.venv,.env
+        uv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=.venv
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=venv,env,.venv,.env
+        uv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=.venv
 
     - name: Run unit tests
       run: |
-        python -m pytest tests/ -v --tb=short -m "unit" --maxfail=5
+        source ~/.cargo/env
+        uv run python -m pytest tests/ -v --tb=short -m "unit" --maxfail=5
 
     - name: Run integration tests
       run: |
-        python -m pytest tests/ -v --tb=short -m "integration" --maxfail=5
+        source ~/.cargo/env
+        uv run python -m pytest tests/ -v --tb=short -m "integration" --maxfail=5
       continue-on-error: true  # Integration tests may fail due to external dependencies
 
     - name: Run all tests with coverage
       run: |
-        python -m pytest tests/ -v --tb=short --cov=qsomap --cov-report=xml --cov-report=term-missing
+        source ~/.cargo/env
+        uv run python -m pytest tests/ -v --tb=short --cov=qsomap --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
