Improve country file loading, map display and small refactor log reader.

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,7 @@ dmypy.json
 # Uploaded files
 uploads/
 *.adif
-*.adi 
+*.adi
+
+# CTY data file (downloaded during build)
+qsomap/common/cty.plist
