--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,6 +7,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     curl \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first to leverage Docker cache
@@ -18,6 +19,10 @@ RUN pip install --no-cache-dir gunicorn==23.0.0
 
 # Copy the rest of the application
 COPY . .
+
+# Download CTY data file for country lookup
+RUN wget -O qsomap/common/cty.plist http://www.country-files.com/cty/cty.plist || \
+    (echo "Failed to download cty.plist, but continuing..." && exit 0)
 
 # Expose port for Gunicorn
 EXPOSE 8000
