--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  redis:
+    image: redis:7-alpine
+    container_name: hamlogmap-redis-dev
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data_dev:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+
   web:
     build: .
     ports:
@@ -9,3 +19,11 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=app.py
       - FLASK_DEBUG=True
+      - REDIS_URL=redis://redis:6379/0
+      - USE_COUNTRYFILE_FROM_REDIS=false
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      - redis
+
+volumes:
+  redis_data_dev:
